assignment1-initial/src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'auto'", "'break'", 
                     "'boolean'", "'do'", "'else'", "'false'", "'float'", 
                     "'for'", "'function'", "'if'", "'integer'", "'return'", 
                     "'string'", "'true'", "'while'", "'void'", "'out'", 
                     "'continue'", "'of'", "'inherit'", "'array'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'::'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "':'", 
                     "','", "'.'", "'='" ]

    symbolicNames = [ "<INVALID>", "COMMENT_BLOCK", "COMMENT_LINE", "AUTO", 
                      "BREAK", "BOOLEAN", "DO", "ELSE", "FALSE", "FLOAT", 
                      "FOR", "FUNCTION", "IF", "INTEGER", "RETURN", "STRING", 
                      "TRUE", "WHILE", "VOID", "OUT", "CONTINUE", "OF", 
                      "INHERIT", "ARRAY", "ADDOP", "SUBOP", "MULOP", "DIVOP", 
                      "MOD", "NOT", "AND", "OR", "EQUAL", "NOT_EQUAL", "LESS", 
                      "LESS_OR_EQUAL", "GREATER", "GREATER_OR_EQUAL", "CONCATENATION", 
                      "LB", "RB", "LP", "RP", "LSB", "RSB", "SEMI", "COLON", 
                      "COMMA", "DOT", "ASSIGN", "ID", "INT_LITERAL", "REAL_LITERAL", 
                      "STRING_LITERAL", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decllist = 1
    RULE_decl = 2
    RULE_vardecl = 3
    RULE_abc = 4
    RULE_funcdecl = 5
    RULE_funcpro = 6
    RULE_paralist = 7
    RULE_paraprime = 8
    RULE_param = 9
    RULE_funcbody = 10
    RULE_stmt = 11
    RULE_block_stmt = 12
    RULE_normal_stmtlist = 13
    RULE_normal_stmt = 14
    RULE_assignstmt = 15
    RULE_ifstmt = 16
    RULE_forstmt = 17
    RULE_whilestmt = 18
    RULE_dowhilestmt = 19
    RULE_breakstmt = 20
    RULE_continuestmt = 21
    RULE_returnstmt = 22
    RULE_callstmt = 23
    RULE_exprlist = 24
    RULE_exprprime = 25
    RULE_expr = 26
    RULE_expr1 = 27
    RULE_expr2 = 28
    RULE_expr3 = 29
    RULE_expr4 = 30
    RULE_expr5 = 31
    RULE_expr6 = 32
    RULE_expr7 = 33
    RULE_dimension = 34
    RULE_expr8 = 35
    RULE_callexpr = 36
    RULE_arr_typ = 37
    RULE_ato_typ = 38
    RULE_int_typ = 39
    RULE_float_typ = 40
    RULE_bool_typ = 41
    RULE_string_typ = 42
    RULE_void_typ = 43
    RULE_auto_typ = 44
    RULE_idlist = 45
    RULE_literal = 46
    RULE_bool_literal = 47
    RULE_array_literal = 48
    RULE_index = 49

    ruleNames =  [ "program", "decllist", "decl", "vardecl", "abc", "funcdecl", 
                   "funcpro", "paralist", "paraprime", "param", "funcbody", 
                   "stmt", "block_stmt", "normal_stmtlist", "normal_stmt", 
                   "assignstmt", "ifstmt", "forstmt", "whilestmt", "dowhilestmt", 
                   "breakstmt", "continuestmt", "returnstmt", "callstmt", 
                   "exprlist", "exprprime", "expr", "expr1", "expr2", "expr3", 
                   "expr4", "expr5", "expr6", "expr7", "dimension", "expr8", 
                   "callexpr", "arr_typ", "ato_typ", "int_typ", "float_typ", 
                   "bool_typ", "string_typ", "void_typ", "auto_typ", "idlist", 
                   "literal", "bool_literal", "array_literal", "index" ]

    EOF = Token.EOF
    COMMENT_BLOCK=1
    COMMENT_LINE=2
    AUTO=3
    BREAK=4
    BOOLEAN=5
    DO=6
    ELSE=7
    FALSE=8
    FLOAT=9
    FOR=10
    FUNCTION=11
    IF=12
    INTEGER=13
    RETURN=14
    STRING=15
    TRUE=16
    WHILE=17
    VOID=18
    OUT=19
    CONTINUE=20
    OF=21
    INHERIT=22
    ARRAY=23
    ADDOP=24
    SUBOP=25
    MULOP=26
    DIVOP=27
    MOD=28
    NOT=29
    AND=30
    OR=31
    EQUAL=32
    NOT_EQUAL=33
    LESS=34
    LESS_OR_EQUAL=35
    GREATER=36
    GREATER_OR_EQUAL=37
    CONCATENATION=38
    LB=39
    RB=40
    LP=41
    RP=42
    LSB=43
    RSB=44
    SEMI=45
    COLON=46
    COMMA=47
    DOT=48
    ASSIGN=49
    ID=50
    INT_LITERAL=51
    REAL_LITERAL=52
    STRING_LITERAL=53
    WS=54
    UNCLOSE_STRING=55
    ILLEGAL_ESCAPE=56
    ERROR_CHAR=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decllist(self):
            return self.getTypedRuleContext(MT22Parser.DecllistContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.decllist()
            self.state = 101
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def decllist(self):
            return self.getTypedRuleContext(MT22Parser.DecllistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decllist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecllist" ):
                return visitor.visitDecllist(self)
            else:
                return visitor.visitChildren(self)




    def decllist(self):

        localctx = MT22Parser.DecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decllist)
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.decl()
                self.state = 104
                self.decllist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def ato_typ(self):
            return self.getTypedRuleContext(MT22Parser.Ato_typContext,0)


        def arr_typ(self):
            return self.getTypedRuleContext(MT22Parser.Arr_typContext,0)


        def auto_typ(self):
            return self.getTypedRuleContext(MT22Parser.Auto_typContext,0)


        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def abc(self):
            return self.getTypedRuleContext(MT22Parser.AbcContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.idlist()
                self.state = 114
                self.match(MT22Parser.COLON)
                self.state = 118
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                    self.state = 115
                    self.ato_typ()
                    pass
                elif token in [MT22Parser.ARRAY]:
                    self.state = 116
                    self.arr_typ()
                    pass
                elif token in [MT22Parser.AUTO]:
                    self.state = 117
                    self.auto_typ()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 120
                self.match(MT22Parser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.match(MT22Parser.ID)
                self.state = 123
                self.abc()
                self.state = 124
                self.expr()
                self.state = 125
                self.match(MT22Parser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AbcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def abc(self):
            return self.getTypedRuleContext(MT22Parser.AbcContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def ato_typ(self):
            return self.getTypedRuleContext(MT22Parser.Ato_typContext,0)


        def arr_typ(self):
            return self.getTypedRuleContext(MT22Parser.Arr_typContext,0)


        def auto_typ(self):
            return self.getTypedRuleContext(MT22Parser.Auto_typContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_abc

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAbc" ):
                return visitor.visitAbc(self)
            else:
                return visitor.visitChildren(self)




    def abc(self):

        localctx = MT22Parser.AbcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_abc)
        try:
            self.state = 143
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.match(MT22Parser.COMMA)
                self.state = 130
                self.match(MT22Parser.ID)
                self.state = 131
                self.abc()
                self.state = 132
                self.expr()
                self.state = 133
                self.match(MT22Parser.COMMA)
                pass
            elif token in [MT22Parser.COLON]:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.match(MT22Parser.COLON)
                self.state = 139
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                    self.state = 136
                    self.ato_typ()
                    pass
                elif token in [MT22Parser.ARRAY]:
                    self.state = 137
                    self.arr_typ()
                    pass
                elif token in [MT22Parser.AUTO]:
                    self.state = 138
                    self.auto_typ()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 141
                self.match(MT22Parser.ASSIGN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcpro(self):
            return self.getTypedRuleContext(MT22Parser.FuncproContext,0)


        def funcbody(self):
            return self.getTypedRuleContext(MT22Parser.FuncbodyContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = MT22Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.funcpro()
            self.state = 146
            self.funcbody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncproContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.ID)
            else:
                return self.getToken(MT22Parser.ID, i)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def paralist(self):
            return self.getTypedRuleContext(MT22Parser.ParalistContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def ato_typ(self):
            return self.getTypedRuleContext(MT22Parser.Ato_typContext,0)


        def void_typ(self):
            return self.getTypedRuleContext(MT22Parser.Void_typContext,0)


        def auto_typ(self):
            return self.getTypedRuleContext(MT22Parser.Auto_typContext,0)


        def arr_typ(self):
            return self.getTypedRuleContext(MT22Parser.Arr_typContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_funcpro

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncpro" ):
                return visitor.visitFuncpro(self)
            else:
                return visitor.visitChildren(self)




    def funcpro(self):

        localctx = MT22Parser.FuncproContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcpro)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(MT22Parser.ID)
            self.state = 149
            self.match(MT22Parser.COLON)
            self.state = 150
            self.match(MT22Parser.FUNCTION)
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.state = 151
                self.ato_typ()
                pass
            elif token in [MT22Parser.VOID]:
                self.state = 152
                self.void_typ()
                pass
            elif token in [MT22Parser.AUTO]:
                self.state = 153
                self.auto_typ()
                pass
            elif token in [MT22Parser.ARRAY]:
                self.state = 154
                self.arr_typ()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 157
            self.match(MT22Parser.LB)
            self.state = 158
            self.paralist()
            self.state = 159
            self.match(MT22Parser.RB)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 160
                self.match(MT22Parser.INHERIT)
                self.state = 161
                self.match(MT22Parser.ID)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParalistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paraprime(self):
            return self.getTypedRuleContext(MT22Parser.ParaprimeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_paralist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParalist" ):
                return visitor.visitParalist(self)
            else:
                return visitor.visitChildren(self)




    def paralist(self):

        localctx = MT22Parser.ParalistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_paralist)
        try:
            self.state = 166
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.OUT, MT22Parser.INHERIT, MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.paraprime()
                pass
            elif token in [MT22Parser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParaprimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(MT22Parser.ParamContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def paraprime(self):
            return self.getTypedRuleContext(MT22Parser.ParaprimeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_paraprime

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParaprime" ):
                return visitor.visitParaprime(self)
            else:
                return visitor.visitChildren(self)




    def paraprime(self):

        localctx = MT22Parser.ParaprimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paraprime)
        try:
            self.state = 173
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                self.param()
                self.state = 169
                self.match(MT22Parser.COMMA)
                self.state = 170
                self.paraprime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 172
                self.param()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def ato_typ(self):
            return self.getTypedRuleContext(MT22Parser.Ato_typContext,0)


        def auto_typ(self):
            return self.getTypedRuleContext(MT22Parser.Auto_typContext,0)


        def arr_typ(self):
            return self.getTypedRuleContext(MT22Parser.Arr_typContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = MT22Parser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 175
                self.match(MT22Parser.INHERIT)


            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.OUT:
                self.state = 178
                self.match(MT22Parser.OUT)


            self.state = 181
            self.match(MT22Parser.ID)
            self.state = 182
            self.match(MT22Parser.COLON)
            self.state = 186
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.state = 183
                self.ato_typ()
                pass
            elif token in [MT22Parser.AUTO]:
                self.state = 184
                self.auto_typ()
                pass
            elif token in [MT22Parser.ARRAY]:
                self.state = 185
                self.arr_typ()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncbodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Block_stmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_funcbody

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncbody" ):
                return visitor.visitFuncbody(self)
            else:
                return visitor.visitChildren(self)




    def funcbody(self):

        localctx = MT22Parser.FuncbodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_funcbody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def normal_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Normal_stmtContext,0)


        def block_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Block_stmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = MT22Parser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_stmt)
        try:
            self.state = 192
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BREAK, MT22Parser.DO, MT22Parser.FOR, MT22Parser.IF, MT22Parser.RETURN, MT22Parser.WHILE, MT22Parser.CONTINUE, MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 190
                self.normal_stmt()
                pass
            elif token in [MT22Parser.LP]:
                self.enterOuterAlt(localctx, 2)
                self.state = 191
                self.block_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(MT22Parser.LP, 0)

        def normal_stmtlist(self):
            return self.getTypedRuleContext(MT22Parser.Normal_stmtlistContext,0)


        def RP(self):
            return self.getToken(MT22Parser.RP, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_block_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock_stmt" ):
                return visitor.visitBlock_stmt(self)
            else:
                return visitor.visitChildren(self)




    def block_stmt(self):
